# sdl2to3

./: CMakeLists.txt  main.cpp
src/: plugin.cpp
src/deprecated/: SDL3RemovedFunctionsCheck.cpp  SDL3RemovedFunctionsCheck.h  SDL3RemovedSDL_CreateRGBSurfaceCheck.cpp  SDL3RemovedSDL_CreateRGBSurfaceCheck.h  SDL3RemovedSDL_CreateRGBSurfaceFromCheck.cpp  SDL3RemovedSDL_CreateRGBSurfaceFromCheck.h  SDL3RemovedSDL_CreateRGBSurfaceWithFormatCheck.cpp  SDL3RemovedSDL_CreateRGBSurfaceWithFormatCheck.h  SDL3RemovedSDL_CreateRGBSurfaceWithFormatFromCheck.cpp  SDL3RemovedSDL_CreateRGBSurfaceWithFormatFromCheck.h
src/includes/: SDL3SubfolderIncludeCheck.cpp  SDL3SubfolderIncludeCheck.h
src/tests/: SDL_CreateRGBSurface.c  SDL_CreateRGBSurfaceFrom.c  SDL_CreateRGBSurfaceWithFormat.c  SDL_CreateRGBSurfaceWithFormatFrom.c  includes.c  removed.c
src/tests/SDL2/: SDL.h
src/tests/SDL3/: SDL.h
